data/derived/fa15/progs/unify/prog0860.ml.out
Characters 88-92:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int list -> int -> int
       Type int list is not compatible with type int -> int 
